feat: adapt experiments to run on Andre's data

--- a/notebooks/EF01 Result Analysis.ipynb
+++ b/notebooks/EF01 Result Analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "8ee6046d-baea-4775-af97-a1cd2e04ecd9",
    "metadata": {},
    "outputs": [],
@@ -25,47 +25,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "09b61419-2bd7-4b36-a660-973cffee0327",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Window root /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2018-2019/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2019-2020/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2021-2022/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2022-2023/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2020-2021/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2016-2017/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n",
+      "Creating report for /Users/donlelef/Git/trading-momentum-transformer/results/experiment_andre_features_tft_cpnone_len63_notime_div_v1/2017-2018/report.html\n",
+      "[*********************100%%**********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
    "source": [
     "results_root = Path.cwd().parent / 'results'\n",
-    "experiment_name = 'experiment_quandl_100assets_tft_cpnone_len63_notime_div_v1'\n",
-    "window = '2020-2021'\n",
-    "window_root = results_root / experiment_name / window\n",
-    "file_name = 'captured_returns_sw.csv'\n",
-    "res_df = pd.read_csv(window_root / file_name, index_col=[0], parse_dates=['time'])\n",
-    "res_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2eb8f34a-2bb9-4797-8621-1de461aab8fd",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "daily_return_df = res_df[['time', 'captured_returns']].groupby('time').sum()\n",
-    "daily_return_df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "84fe5ae6-5a68-48a9-a54a-68da81c64b8a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "output_path = window_root / 'report.html'\n",
-    "with warnings.catch_warnings():\n",
-    "    warnings.simplefilter(\"ignore\", FutureWarning)\n",
-    "    quantstats.reports.html(\n",
-    "        returns=daily_return_df['captured_returns'],\n",
-    "        benchmark='SPY',\n",
-    "        periods_per_year=252,\n",
-    "        output=output_path\n",
-    "    )"
+    "experiment_name = 'experiment_andre_features_tft_cpnone_len63_notime_div_v1'\n",
+    "window_root = results_root / experiment_name\n",
+    "print(f'Window root {window_root}')\n",
+    "for res_file_name in window_root.glob('**/captured_returns_sw.csv'):\n",
+    "    res_df = pd.read_csv(res_file_name, index_col=[0], parse_dates=['time'])\n",
+    "    daily_return_df = res_df[['time', 'captured_returns']].groupby('time').sum()\n",
+    "    daily_return_df['captured_returns'] = daily_return_df['captured_returns'].clip(-0.5, 0.5)\n",
+    "    output_path = res_file_name.parent / 'report.html'\n",
+    "    print(f'Creating report for {output_path}')\n",
+    "    with warnings.catch_warnings():\n",
+    "        warnings.simplefilter(\"ignore\", FutureWarning)\n",
+    "        quantstats.reports.html(\n",
+    "            returns=daily_return_df['captured_returns'],\n",
+    "            benchmark='SPY',\n",
+    "            periods_per_year=252,\n",
+    "            output=output_path\n",
+    "        )"
    ]
   }
  ],
